# tmplot

./: Cargo.toml  README.md  test.sh
src/: arg.rs  common.rs  main.rs  plot.rs  scatter.rs
tmplot/: cli.py  util.py
tmplot/cat/: common.py  hist.py  plot.py  scatter.py
tmplot/single/: common.py  hist.py  plot.py  scatter.py
tmplot/twin/: common.py  plot.py  scatter.py
